feature and unit tests are all passing, images for new contacts are created

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -65,7 +65,9 @@
       </button>
     </div>
   </form>
-  <app-card></app-card>
+  <ng-container class="container" *ngFor="let c of contacts">
+    <app-card [contact]="c"></app-card>
+  </ng-container>
 </div>
 
   
