fixing contact cards to display content

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h1>Create contact</h1>
+<h1 class="text-center">Create contact</h1>
 <div class="container max-w-lg mx-6">
   <form class="bg-white shadow-md w-full max-w-md px-8 pt-6 pb-8 mb-4">
     <h2>Create contact</h2>
@@ -56,7 +56,7 @@
           Notes
         </label>
         <textarea [(ngModel)]="contact.notes" class="appearance-none block w-full bg-grey-lighter text-grey-darker border border-grey-lighter rounded py-3 px-4 mb-3"
-          id="grid-notes" type="password" name="notes" placeholder="Things to know about this contact"></textarea>
+          id="grid-notes" type="text" name="notes" placeholder="Things to know about this contact"></textarea>
       </div>
     </div>
 
